envoy-upstream-bind-config.yaml
# admin:
#   access_log_path: /tmp/admin_access.log
#   address:
#     socket_address:
#       protocol: TCP
#       address: 127.0.0.1
#       port_value: 9901
static_resources:
  listeners:
  - name: my_listener
    address:
      socket_address:
        protocol: TCP
        address: "127.0.0.1"
        port_value: 13333
    filter_chains:
    - filters:
      # The HTTP connection manager is the only network filter.
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                  headers:
                  - name: "foo"
                    present_match: false
                route:
                  cluster: my_cluster
                request_headers_to_add:
                - header:
                    key: foo
                    value: bar
              - match:
                  prefix: "/"
                  headers:
                  - name: "foo"
                    present_match: true
                route:
                  cluster: my_cluster
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: my_cluster
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    protocol_selection: USE_DOWNSTREAM_PROTOCOL
    http2_protocol_options: {}
    upstream_bind_config:
      source_address:
        address: 172.41.3.14
        port_value: 39555
      additional_source_addresses:
      - address: "2001:db8:100:15a::1"
        port_value: 39556
      - address: "2001:db8:100:15a::2"
        port_value: 39556
    load_assignment:
      cluster_name: my_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 172.41.3.14
                port_value: 33333
        - endpoint:
            address:
              socket_address:
                address: "2001:db8:85a3::1"
                port_value: 33333
